# adverserial_pydantic

./: .env.example  .gitignore  README.md  pyproject.toml
src/adversarial_tournament/: __init__.py  config.py  main.py  tournament.py
src/adversarial_tournament/agents/: __init__.py  contestant.py  judge.py  persona_generator.py
src/adversarial_tournament/models/: __init__.py  persona.py  tournament.py
src/adversarial_tournament/prompts/: __init__.py  templates.py
tests/: __init__.py  test_agents.py  test_e2e.py  test_models.py
